# bkamalie

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  get_bank_name.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
.streamlit/: config.toml
app/: bka_app.py  boedekasse.py  boedekasse_admin.py  dashboard.py  utils.py
bkamalie/app/: bka_app copy.py  bka_app.py  boedekasse.py  boedekasse_admin.py  boeder.py  dashboard.py  model.py  my_fines.py  stikkerlinjen.py  utils.py
bkamalie/css_styles/: payment_card.py
bkamalie/database/: execute.py  model.py  utils.py
bkamalie/holdsport/: api.py
database/: execute.py  utils.py
holdsport/: api.py
tests/: conftest.py  test_api.py  test_app.py  test_database.py
tests/data/: fines.csv
