[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BKAmalie"
version = "0.1.0"
description = "A simple project with an app, api, and tests."
authors = [
    { name="Mikkel Annesen Vestergaard", email="mvestergaard96@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pydantic",
    "streamlit>=1.45.0",
    "polars[sqlalchemy]",
    "connectorx",
    "plotly",
    "psycopg2-binary",
    "millify",
    "streamlit-cookies-controller",
]

[tool.hatch.build]
include = [
  "bkamalie/app/*.py",
]

[tool.hatch.envs.default]
python = "3.12"
installer = "uv"

[tool.hatch.envs.default.scripts]
app = "python -m streamlit run bkamalie/app/bka_app.py"

[tool.hatch.envs.test]
python = "3.12"
extra-dependencies = [
  "pytest",
  "testcontainers",
]

[tool.hatch.envs.test.scripts]
base = "pytest {args}"

[tool.hatch.envs.lint]
detached = true
dependencies = ["pre-commit"]

[tool.hatch.envs.lint.scripts]
run = "pre-commit run --all-files"
